Band name correction.

--- a/data/bands.yml
+++ b/data/bands.yml
@@ -59,7 +59,7 @@ main:
     link:
     embed:
 
-  - name: "DR LOOKSHARP"
+  - name: "DOC LOOKSHARP"
     genre: LIVESET | NOISE / EXPERIMENTAL / CONCRETE
     from: PAVIA
     date: Venerdì 19
