--- a/data/agenda.yml
+++ b/data/agenda.yml
@@ -24,7 +24,7 @@
         - time: "19.00"
           band: TEEEPEEE
         - time: "20.00"
-          band: DR LOOKSHARP
+          band: DOC LOOKSHARP
         - time: "20.40"
           band: SNEKULA
         - time: "21.20"
