Band name correction.

--- a/data/agenda.yml
+++ b/data/agenda.yml
@@ -30,7 +30,7 @@
         - time: "21.20"
           band: SCABB
         - time: "22.00"
-          band: LOOP TERAPHY
+          band: LOOP THERAPY
         - time: "23.15"
           band: TEEEPEEE
         - time: "00.00"
