--- a/data/bands.yml
+++ b/data/bands.yml
@@ -95,7 +95,7 @@ main:
     link: "https://www.facebook.com/krang111/"
     embed: "https://youtu.be/W8YlecyTTgY"
 
-  - name: "LOOP TERAPHY"
+  - name: "LOOP THERAPY"
     genre: LIVE | FUNK / HIP-HOP / JAZZ
     from: MILANO
     date: Venerdì 19
